Fixed arrays, finishing touches needed

--- a/homepage.html
+++ b/homepage.html
@@ -12,9 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+    <script type="text/javascript">
+      let pageName = "homepage";
+    </script>
+
   </head>
   <body>
-    <div class="NavBar">
+    <div class="navBar">
       <ul>
         <li><a class="active" href="homepage.html">Home</a></li>
         <li><a href="questionnaire.html">Sample Questionnaire</a></li>
@@ -24,9 +29,6 @@
     </div>
 
     <div class="contentContainer">
-    <div class="Ad1">
-
-    </div>
 
     <div class="centerContent">
     <div class="Title">
@@ -35,11 +37,13 @@
     </div>
     <div class="Intro">
       <p>Welcome to HeartConnect!</p>
-      <p>We are a free dating site </p>
+      <p>We are a free dating site that takes your information and uses it to find your perfect person! </p>
+      <p>You may have heard that we also collect your financial information. Well that is correct!<br> Studies show that the most successful relationships are between people of similar economic status.<br> As a result, to optimize the odds of successful relationships for our users, we gather this information.<br> After all, what's more important? Your privacy or finding your soulmate?</p>
     </div>
     <div class="glide fullWidth">
             <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides" id="happyCouples">
+              <ul class="glide__slides" id="HappyCouples">
+
               </ul>
             </div>
             <div class="glide__arrows" data-glide-el="controls">
@@ -49,11 +53,8 @@
           </div>
     </div>
 
-    <div class="Ad2">
 
-    </div>
-
-    <div class="Footer">
+    <div class="HomeFooter">
         <div class="Languages">
           <h1>Languages(Coming Soon)</h1>
           <p>English</p>
@@ -67,6 +68,14 @@
           <p>Copyright HeartConnect 2021</p>
         </div>
       </div>
+    </div>
+
+    <div class="Ad1">
+
+    </div>
+
+    <div class="Ad2">
+
     </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js" integrity="sha512-BXASbMmKLu+RC5TDnkupyhvrjiOQXILh/5zgIS8k5JAC71a73lNweVEg/X+9XJQ7GK22PH9WpztY3zqrji+xrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
