--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript">
+      let pageName="profile";
+    </script>
   </head>
   <body>
     <div class="NavBar">
@@ -16,9 +19,7 @@
       <li><a href="profile.html">Your Profile</a></li>
     </ul>
   </div>
-  <div class="Ad5">
 
-  </div>
   <div class="centerContent">
   <div class="TitleSmall">
     <h1>HeartConnect</h1>
@@ -29,28 +30,35 @@
       <img src="EmptyProfilePic.jpg" alt="Profilepicture">
     </div>
     <div class="Name">
-
+      <h1 id="name"></h1>
     </div>
     <div class="Detailbox1">
-      <h1>Age:</h1>
-      <p id="a"></p>
-      <h1>Gender:</h1>
-      <h1>Occupation:</h1>
-      <h1>Likes:</h1>
+      <h1>Age</h1>
+      <p id="age"></p>
+      <h1>Gender</h1>
+      <p id="gender"></p>
+      <h1>Occupation</h1>
+      <p id ="occupation"></p>
+      <h1>Likes</h1>
+      <p id="likes"></p>
     </div>
     <div class="Detailbox2">
-      <h1>Location:</h1>
-      <h1>Credit Score:</h1>
-      <h1>Dislikes:</h1>
+      <h1>Location</h1>
+      <p id="location"></p>
+      <h1>Credit Score</h1>
+      <p id= "cs"></p>
+      <h1>Dislikes</h1>
+      <p id="dislikes"></p>
+      <h1>Crime Record</h1>
+      <a href="http://ww2.nycourts.gov/apps/chrs/index.shtml">Criminal Record</a>
     </div>
-    <div class="CriminalRecord">
-
-    </div>
+    <!-- <div class="CriminalRecord">
+      <h1>Criminal Record</h1>
+      <a href="http://ww2.nycourts.gov/apps/chrs/index.shtml">Criminal Record</a>
+    </div> -->
     <div class="Lookingfor">
       <h1> Looking for: </h1>
-      <div id="outputContainer">
-        <p id="outputText"></p>
-      </div>
+      <p id="preferences"></p>
     </div>
     <div class="SocialMedia">
       <h1>Social Media</h1>
@@ -60,9 +68,38 @@
     </div>
     <div class="Gallery">
       <h1>Gallery</h1>
+      <div class="GalleryInternal">
+        <div class="galleryitem">
+          <img src="Gallery1.jpg" alt="1">
+        </div>
+        <div class="galleryitem">
+          <img src="Gallery2.jpg" alt="2">
+        </div>
+        <div class="galleryitem">
+          <img src="Gallery3.jpg" alt="3">
+        </div>
+        <div class="galleryitem">
+          <img src="Gallery4.jpg" alt="4">
+        </div>
+        <div class="galleryitem">
+          <img src="Gallery5.jpeg" alt="5">
+        </div>
+        <div class="galleryitem">
+          <img src="Gallery6.jpg" alt="6">
+        </div>
+        <div class="galleryitem">
+          <img src="Gallery7.jpg" alt=7"">
+        </div>
+        <div class="galleryitem">
+          <img src="Gallery8.jpg" alt="8">
+        </div>
+        <div class="galleryitem">
+          <img src="Gallery10.jpg" alt="10">
+        </div>
+      </div>
     </div>
   </div>
-  <div class="Footer">
+  <div class="HomeFooter">
     <div class="Languages">
       <h1>Languages(Coming Soon)</h1>
       <p>English</p>
@@ -76,6 +113,9 @@
       <p>Copyright HeartConnect 2021</p>
     </div>
   </div>
+</div>
+<div class="Ad5">
+
 </div>
 <div class="Ad6">
 
