--- a/makeaccount.html
+++ b/makeaccount.html
@@ -6,18 +6,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript">
+      let pageName="makeaccount";
+    </script>
   </head>
   <body>
-    <div class="NavBar">
+    <div class="navBar">
     <ul>
       <li><a class="active" href="homepage.html">Home</a></li>
       <li><a href="questionnaire.html">Sample Questionnaire</a></li>
       <li><a href="makeaccount.html">Create an Account</a></li>
       <li><a href="profile.html">Your Profile</a></li>
     </ul>
-  </div>
-  <div class="Ad3">
-
   </div>
   <div class="centerContent">
   <div class="TitleSmall">
@@ -34,6 +34,8 @@
       <input type="text" id="address" name="address"><br><br>
 
       <div class="Address">
+      <label for="email">Email Address: </label>
+      <input type="email">
       <label for="city">City: </label>
       <input type="text" id="city" name="city"><br><br>
       <label for="country">Country: </label>
@@ -78,10 +80,10 @@
       <input type="checkbox" id="Consent" name="Consent" value="Consent">
       <label for="Consent"> I understand that by signing up, you are agreeing to our terms and conditions, which remove your right to sue us and gives us access to all of your personal information.
 </label><br>
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit" id="subdes">
     </form>
   </div>
-  <div class="Footer">
+  <div class="HomeFooter">
     <div class="Languages">
       <h1>Languages(Coming Soon)</h1>
       <p>English</p>
@@ -95,6 +97,9 @@
       <p>Copyright HeartConnect 2021</p>
     </div>
   </div>
+</div>
+<div class="Ad3">
+
 </div>
 <div class="Ad4">
 
