--- a/makeaccount.html
+++ b/makeaccount.html
@@ -20,7 +20,7 @@
     </ul>
   </div>
   <div class="centerContent">
-  <div class="TitleSmall">
+  <div class="Title">
     <h1>HeartConnect</h1>
     <img src="Heart Symbol.png" alt="Symbol">
   </div>
@@ -80,7 +80,7 @@
       <input type="checkbox" id="Consent" name="Consent" value="Consent">
       <label for="Consent"> I understand that by signing up, you are agreeing to our terms and conditions, which remove your right to sue us and gives us access to all of your personal information.
 </label><br>
-      <input type="submit" value="Submit" id="subdes">
+      <input type="submit" value="Submit" onclick="sub()" id="subdes">
     </form>
   </div>
   <div class="HomeFooter">
