--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="centerContent">
-  <div class="TitleSmall">
+  <div class="Title">
     <h1>HeartConnect</h1>
     <img src="Heart Symbol.png" alt="Symbol">
   </div>
@@ -88,7 +88,7 @@
           <img src="Gallery6.jpg" alt="6">
         </div>
         <div class="galleryitem">
-          <img src="Gallery7.jpg" alt=7"">
+          <img src="Gallery7.jpg" alt="7">
         </div>
         <div class="galleryitem">
           <img src="Gallery8.jpg" alt="8">
