--- a/questionnaire.html
+++ b/questionnaire.html
@@ -20,14 +20,18 @@
     </ul>
   </div>
     <div class="centerContent">
-    <div class="TitleSmall">
+    <div class="Title">
       <h1>HeartConnect</h1>
       <img src="Heart Symbol.png" alt="Symbol">
     </div>
     <div class="Questionnaire">
       <h1>Please answer a few of these questions. They'll help us match you to your perfect person!</h1>
       <ol id="questionList">
-
+        <!-- <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li> -->
       </ol>
       <div class="Response">
         <input type="text" id="textboxid">
