--- a/homepage.html
+++ b/homepage.html
@@ -38,7 +38,7 @@
     <div class="Intro">
       <p>Welcome to HeartConnect!</p>
       <p>We are a free dating site that takes your information and uses it to find your perfect person! </p>
-      <p>You may have heard that we also collect your financial information. Well that is correct!<br> Studies show that the most successful relationships are between people of similar economic status.<br> As a result, to optimize the odds of successful relationships for our users, we gather this information.<br> After all, what's more important? Your privacy or finding your soulmate?</p>
+      <p>You may have heard that we also collect your financial information and check your credit score. Well that is correct!<br> Studies show that the most successful relationships are between people of similar economic status.<br> As a result, to optimize the odds of successful relationships for our users, we gather this information and limit your matches to those of similar or lower economic status.<br> After all, what's more important? Your privacy or finding your soulmate?</p>
     </div>
     <div class="glide fullWidth">
             <div class="glide__track" data-glide-el="track">
